# astra

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  conftest.py  contributing.html  environment.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  tempCodeRunnerFile.python
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: documentation.yml  format_and_test.yml
_modules/: index.html
_modules/astra/: action_configs.html  alpaca_device_process.html  autofocus.html  calibrate_guiding.html  config.html  database_manager.html  device_manager.html  filename_templates.html  guiding.html  header_manager.html  image_handler.html  logger.html  main.html  observatory.html  observatory_loader.html  paired_devices.html  pointer.html  queue_manager.html  safety_monitor.html  scheduler.html  thread_manager.html  utils.html
_sources/: contributing.md  index.md  installation.md
_sources/api/: endpoints.rst  index.rst
_sources/user_guide/: core_logic.md  custom_observatories.md  fits_header_configuration.md  observatory_configuration.md  operation.md  overview.md  scheduling.md
_static/: style.css  ui-robotic-switch-screenshot.psd
api/: endpoints.html  index.html
code/config/: Callisto.yml  SAINTEX.yml  fits_headers.csv
code/schedule/: Callisto.csv  SAINTEX.csv
code/src/: alpaca_device.py  alpaca_device_process.py  ascom_device.py  astra.py  calibrate_guiding.py  guiding.py  main.py  utils.py
code/src/frontend/: index.html.j2
code/src/frontend/js/: particlesjs-config.json
code/tests/: test_astra.py  test_main.py
docs/: conf.py  development.md  index.rst  master_config.md  modules.rst  observatory_config.md  operations.rst  schedule.md  workflow.rst
docs/source/: conf.py  contributing.md  getting_started.rst  index.md  index.rst  installation.md  motivation.md  quickstart.md
docs/source/_ext/: fastapi_autodoc.py
docs/source/_static/: style.css
docs/source/_templates/autosummary/: class.rst
docs/source/api/: endpoints.rst  index.rst
docs/source/user_guide/: configuration.rst  custom_observatories.md  fits_header_configuration.md  index.md  observatory_configuration.md  operation.md  scheduling.md  scheduling.rst
example_observatories/speculoos/: speculoos.py
files/config/: Callisto.yml  Callisto_fits_headers.csv
files/schedule/: Callisto.csv  Callisto.yaml
frontend/: index.html.j2
observatory_config_template/: observatoryname.yaml  observatoryname_fits_headers.csv
scratch/: conftest.py
scratch/exposure_calculator/: analyzer.py  interfaces.py  models.py  optimizer.py  schedule_adapter.py
scratch/exposure_calculator/tests/: conftest.py  test_analyzer.py  test_optimizer.py  test_schedule_adapter.py
src/astra/: __init__.py  action_configs.py  alpaca_device_process.py  astra_config.py  astra_object.py  autofocus.py  calibrate_guiding.py  config.py  database_manager.py  device_manager.py  filename_templates.py  guiding.py  guiding_ref_image_removal.py  header_manager.py  image_handler.py  logger.py  logging_handler.py  main.py  observatory.py  observatory_loader.py  paired_devices.py  pointer.py  queue_manager.py  safety_monitor.py  schedule.py  scheduler.py  thread_manager.py  utils.py
src/astra/config/templates/: observatory_config.yml  observatory_fits_header_config.csv
src/astra/frontend/: index.html.j2
src/astra/frontend/file_explorer/static/: index.html
src/astra/frontend/js/: d3-7.9.0.min.js  guiding.js  plot-0.6.17.min.js  sky_projection.js  stars.json  weather.js
src/astra/scripts/: calibrate_guiding.py
src/template_configs/: template_observatory_config.yml
tests/: _test_astra.py  test_astra.py  test_config.py  test_database_manager.py  test_device_manager.py  test_image_handler.py  test_logger.py  test_main.py  test_paired_devices.py  test_pointer.py  test_queue_manager.py  test_safety_monitor.py  test_schedule.py  test_scheduler.py  test_subframe_observatory.py  test_thread_manager.py
tests/test_schedule/: full_schedule.csv  full_schedule.yaml
user_guide/: core_logic.html  custom_observatories.html  fits_header_configuration.html  observatory_configuration.html  operation.html  overview.html  scheduling.html
