[project]
name = "astra"
description = "Automated Survey observaTory Robotised with Alpaca"
dynamic = ["version"]
authors = [{ name = "Peter Pedersen " }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astrafocus @ git+https://github.com/dgegen/astrafocus.git",
    "astropy",
    "photutils",
    "scipy==1.10.1",
    "twirl",
    "sqlite3worker",
    "alpyca @ git+https://github.com/ppp-one/alpyca.git",
    "psutil",
    "donuts",
    "httpx",
    "matplotlib",
    "pandas",
    "fastapi[standard]",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["ruff", "black==24.3.0", "pytest", "toml"]
test = ["pytest"]
docs = [
    "matplotlib",
    "myst-nb",
    "sphinx-book-theme",
    "sphinx-design",
    "ipywidgets",
    "sphinx-copybutton",
    "docformatter[tomli]",
    "toml",
]

[project.urls]
"Homepage" = "https://github.com/ppp-one/astra"
"Source" = "https://github.com/ppp-one/astra"
"Bug Tracker" = "https://github.com/ppp-one/astra/issues"

[project.scripts]
astra = "astra.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
