[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
authors = [{name = "Peter Pedersen "}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "astrafocus @ git+https://github.com/dgegen/astrafocus.git",
  "astropy",
  "photutils",
  "scipy==1.10.1",
  "twirl",
  "sqlite3worker",
  "alpyca @ git+https://github.com/ppp-one/alpyca.git",
  "psutil",
  "donuts",
  "httpx",
  "jinja2",
  "matplotlib",
  "pandas",
  "fastapi[standard]",
  "pyyaml",
  "cabaret"
]
description = "Automated Survey observaTory Robotised with Alpaca"
dynamic = ["version"]
license = {text = "GPL-3.0"}
name = "astra"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff", "pytest", "toml", "pre-commit"]
docs = [
  "sphinx",
  "matplotlib",
  "myst-nb",
  "sphinx-book-theme",
  "sphinx-design",
  "ipywidgets",
  "sphinx-copybutton",
  "docformatter[tomli]",
  "toml"
]
test = [
  "pytest",
  "alpaca-simulators @ git+https://github.com/ppp-one/alpaca-simulators"
]

[project.scripts]
astra = "astra.main:main"

[project.urls]
"Bug Tracker" = "https://github.com/ppp-one/astra/issues"
"Homepage" = "https://github.com/ppp-one/astra"
"Source" = "https://github.com/ppp-one/astra"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
addopts = "-ra -q"
markers = [
  "slow: mark test as slow"
]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
exclude = ["*.yaml"]
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
