[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.21,<0.10.0"]

[dependency-groups]
dev = ["ruff", "toml", "pre-commit", {include-group = "test"}]
docs = [
  "sphinx",
  "matplotlib",
  "myst-nb",
  "sphinx-book-theme",
  "sphinx-design",
  "ipywidgets",
  "sphinx-copybutton",
  "docformatter[tomli]",
  "toml"
]
test = [
  "pytest",
  "alpaca-simulators @ git+https://github.com/ppp-one/alpaca-simulators"
]

[project]
authors = [{name = "Peter Pedersen "}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "astrafocus>=0.1.1",
  "astropy",
  "photutils",
  "scipy",
  "twirl>=0.4.1",
  "sqlite3worker",
  "alpyca @ git+https://github.com/ppp-one/alpyca.git",
  "psutil",
  "donuts",
  "httpx",
  "jinja2",
  "matplotlib",
  "pandas",
  "fastapi[standard]",
  "pyyaml",
  "ruamel.yaml",
  "cabaret"
]
description = "Automated Survey observaTory Robotised with Alpaca"
license = {text = "GPL-3.0"}
name = "astra"
readme = "README.md"
requires-python = "==3.11.*"
version = "1.0.1"

[project.scripts]
astra = "astra.main:main"

[project.urls]
"Bug Tracker" = "https://github.com/ppp-one/astra/issues"
"Homepage" = "https://github.com/ppp-one/astra"
"Source" = "https://github.com/ppp-one/astra"

[tool.pytest.ini_options]
addopts = "-ra -q"
markers = [
  "slow: mark test as slow"
]
minversion = "6.0"
testpaths = ["tests"]

[tool.ruff]
exclude = ["*.yaml"]
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
